--- a/.prettierrc
+++ b/.prettierrc
@@ -1,11 +1,17 @@
 {
+  "semi": false,
   "tabWidth": 2,
   "useTabs": false,
-  "printWidth": 100,
+  "printWidth": 90,
   "singleQuote": true,
+  "trailingComma": "all",
   "jsxSingleQuote": true,
+  "bracketSpacing": true,
   "endOfLine": "lf",
+  "importOrder": ["<THIRD_PARTY_MODULES>", "^@/(.*)$", "^[./]"],
+  "importOrderSeparation": true,
+  "importOrderSortSpecifiers": true,
   "plugins": [
-    "prettier-plugin-organize-imports"
+    "@trivago/prettier-plugin-sort-imports"
   ]
 }
