--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@rc-ses/self-service-portal-ui",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
   "author": "CGI",
   "repository": {
@@ -17,23 +17,27 @@
     "check-format": "prettier --check .",
     "test": "cross-env BABEL_ENV=test jest",
     "watch-tests": "cross-env BABEL_ENV=test jest --watch",
-    "coverage": "cross-env BABEL_ENV=test jest --coverage"
+    "coverage": "cross-env BABEL_ENV=test jest --coverage",
+    "rc-ses-components:purge": "rimraf -r ./node_modules/.vite/deps && rimraf -r ./node_modules/@registrucentras",
+    "rc-ses-components:install": "npm run rc-ses-components:purge && npm i --install-links"
   },
   "dependencies": {
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@fontsource/source-sans-pro": "^5.0.8",
-    "@mui/icons-material": "^5.15.2",
-    "@mui/material": "^5.15.2",
+    "@mui/icons-material": "^5.15.20",
+    "@mui/material": "^5.16.3",
+    "@mui/x-date-pickers": "^7.7.0",
+    "@registrucentras/rc-ses-react-components": "github:registrucentras/rc-ses-react-components#v0.0.23-rc.1",
     "axios": "^1.6.3",
     "clsx": "^2.1.0",
-    "i18next": "^23.7.11",
+    "i18next": "^23.15.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.49.2",
     "react-i18next": "^13.5.0",
     "react-router-dom": "^6.21.0",
-    "single-spa-react": "^6.0.1"
+    "single-spa-react": "^6.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -45,27 +49,30 @@
     "@babel/preset-react": "^7.12.7",
     "@babel/preset-typescript": "^7.23.3",
     "@babel/runtime": "^7.12.5",
+    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/copy-webpack-plugin": "^10.1.0",
     "@types/node": "^20.10.6",
     "@types/react": "^18.2.47",
     "@types/react-dom": "^18.2.18",
-    "@typescript-eslint/eslint-plugin": "^6.15.0",
-    "@typescript-eslint/parser": "^6.15.0",
+    "@typescript-eslint/eslint-plugin": "^7.13.0",
+    "@typescript-eslint/parser": "^7.13.0",
     "babel-loader": "^9.1.3",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.9.1",
     "eslint": "^8.56.0",
     "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-airbnb-typescript": "^17.1.0",
+    "eslint-config-airbnb-typescript": "^18.0.0",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-import-resolver-alias": "^1.1.2",
+    "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-jsx-a11y": "^6.8.0",
-    "eslint-plugin-n": "^16.5.0",
-    "eslint-plugin-prettier": "^5.1.0",
-    "eslint-plugin-promise": "^6.1.1",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "prettier": "^3.1.1",
+    "eslint-plugin-n": "^17.9.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-promise": "^6.2.0",
+    "eslint-plugin-react": "^7.34.2",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "prettier": "^3.3.2",
     "prettier-plugin-organize-imports": "^3.2.4",
     "style-loader": "^3.3.4",
     "ts-config-single-spa": "^3.0.0",
@@ -74,7 +81,6 @@
     "typescript": "^5.3.3",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4",
-    "webpack-config-single-spa-react": "^4.0.5",
     "webpack-config-single-spa-react-ts": "^4.0.5",
     "webpack-dev-server": "^4.15.1",
     "webpack-merge": "^5.10.0"
