--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@rc-ses/self-service-portal-ui",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "private": true,
   "author": "CGI",
   "repository": {
@@ -28,14 +28,14 @@
     "@mui/icons-material": "^5.15.20",
     "@mui/material": "^5.16.3",
     "@mui/x-date-pickers": "^7.7.0",
-    "@registrucentras/rc-ses-react-components": "github:registrucentras/rc-ses-react-components#v0.0.23-rc.1",
+    "@registrucentras/rc-ses-react-components": "github:registrucentras/rc-ses-react-components#v0.0.23",
     "axios": "^1.6.3",
     "clsx": "^2.1.0",
-    "i18next": "^23.15.2",
+    "i18next": "^23.11.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.49.2",
-    "react-i18next": "^13.5.0",
+    "react-i18next": "^14.1.2",
     "react-router-dom": "^6.21.0",
     "single-spa-react": "^6.0.2"
   },
