--- a/package.json
+++ b/package.json
@@ -29,13 +29,18 @@
     "@mui/material": "^5.16.3",
     "@mui/x-date-pickers": "^7.7.0",
     "@registrucentras/rc-ses-react-components": "github:registrucentras/rc-ses-react-components#v0.0.23",
-    "axios": "^1.6.3",
+    "@tanstack/react-query": "^5.60.5",
+    "@types/js-cookie": "^3.0.6",
+    "axios": "^1.7.2",
     "clsx": "^2.1.0",
     "i18next": "^23.11.5",
+    "js-cookie": "^3.0.5",
+    "oidc-client-ts": "^3.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.49.2",
     "react-i18next": "^14.1.2",
+    "react-oidc-context": "^3.2.0",
     "react-router-dom": "^6.21.0",
     "single-spa-react": "^6.0.2"
   },
