--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@rc-ses/self-service-portal-ui",
-  "version": "0.2.1",
+  "name": "@rc-ses/mfe-navigation",
+  "version": "0.3.0",
   "private": true,
   "author": "CGI",
   "repository": {
@@ -28,10 +28,13 @@
     "@mui/icons-material": "^5.15.20",
     "@mui/material": "^5.16.3",
     "@mui/x-date-pickers": "^7.7.0",
-    "@registrucentras/rc-ses-react-components": "github:registrucentras/rc-ses-react-components#v0.0.23",
+    "@reflet/http": "^1.0.0",
+    "@registrucentras/rc-ses-react-components": "github:registrucentras/rc-ses-react-components#v0.0.30",
     "@tanstack/react-query": "^5.60.5",
     "@types/js-cookie": "^3.0.6",
     "axios": "^1.7.2",
+    "date-fns": "^3.6.0",
+    "date-fns-tz": "^3.1.3",
     "clsx": "^2.1.0",
     "i18next": "^23.11.5",
     "js-cookie": "^3.0.5",
